Fixed spacing issue in full screen mode (#505)
* Fixed spacing issue in full screen mode 

Fixed issue #494

* Fixed the issue of uneven spacing in full screen mode

* Made calendar date capitalized

* Revert "Made calendar date capitalized"

This reverts commit 99373a174777d8cf7db8d35ffb5714feb45c12c2.

--- a/css/styles.css
+++ b/css/styles.css
@@ -901,6 +901,10 @@ html[data-view='flexible'] .row-waiver .waived-day-text {
   html[data-view='flexible'] .row-waiver .waived-day-text {
     width: 80%;
   }
+
+  html[data-view='flexible'] .row-time {
+    width: 25%;
+  }
 }
 
 html[data-view='flexible'] .arrow {
